--- a/style.css
+++ b/style.css
@@ -1419,6 +1419,7 @@ h1.site-logo a:hover {
   margin: 0 auto;
   text-align: left;
   font-size: 1.1rem;
+  margin-bottom: 3rem;
 }
 
 @media only screen and (max-width: 581px) {
