--- a/style.css
+++ b/style.css
@@ -1167,17 +1167,26 @@ nav a:hover,
   margin-bottom: 3rem;
 }
 
-/* Hide mobile button on larger screens */
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
-		display: none;
-	}
-
-/* Small menu. */
-  .menu-toggle,
-  .main-navigation.toggled ul {
-  	display: block;
+@media only screen and (max-width: 740px) {
+  .head-banner {
+    margin: 0;
   }
+  nav {
+    margin-left: 1rem;
+  }
+  .hide-tablet {
+    display: none;
+  }
+  h1.site-logo {
+    margin: 0 0 0 .5rem !important;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .hide-mobile {
+    display: none;
+  }
+}
 
 nav.navigation.posts-navigation {
   margin: 0;
