--- a/style.css
+++ b/style.css
@@ -1167,24 +1167,17 @@ nav a:hover,
   margin-bottom: 3rem;
 }
 
+/* Mobile menu */
+
+/* Hide Hamburger */
+#hamnav label, #hamburger { display: none; }
+
 @media only screen and (max-width: 740px) {
-  .head-banner {
-    margin: 0;
-  }
   nav {
     margin-left: 1rem;
   }
-  .hide-tablet {
-    display: none;
-  }
   h1.site-logo {
     margin: 0 0 0 .5rem !important;
-  }
-}
-
-@media only screen and (max-width: 640px) {
-  .hide-mobile {
-    display: none;
   }
 }
 
