--- a/style.css
+++ b/style.css
@@ -1170,7 +1170,7 @@ nav a:hover,
 /* Mobile menu */
 
 /* Hide Hamburger */
-#hamnav label, #hamburger { display: none; }
+#site-navigation label, #hamburger { display: none; }
 
 @media only screen and (max-width: 740px) {
   nav {
