--- a/style.css
+++ b/style.css
@@ -91,11 +91,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  .head-banner {
    margin: 0 auto;
    max-width: 1240px;
-   background: var(--header);
    position: relative;
    display: flex;
    white-space: nowrap;
    overflow: hidden;
+   padding-top: 1rem;
  }
 
  #page { /* Default content div */
