--- a/style.css
+++ b/style.css
@@ -1171,10 +1171,7 @@ nav a:hover,
   /* Show Hamburger Icon */
   #site-navigation label {
     display: inline-block;
-    color: white;
-    font-style: normal;
-    font-size: 1.2em;
-    padding: 10px;
+    color: var(--text);
   }
 
   /* Break down menu items into vertical */
