--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 
  .head-banner {
-   margin: 0 auto;
+   margin: 0 1rem auto;
    max-width: 1240px;
    position: relative;
    display: flex;
@@ -1128,7 +1128,6 @@ textarea {
 nav {
   text-align: center;
   font-size: 1rem;
-  margin-left: 3rem;
   padding-top: .75rem;
 }
 
@@ -1173,10 +1172,6 @@ nav a:hover,
   #site-navigation label {
     display: inline-block;
     color: var(--text);
-  }
-
-  .head-banner {
-    margin: 0 1rem;
   }
 
   /* Break down menu items into vertical */
