--- a/style.css
+++ b/style.css
@@ -86,14 +86,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 
  .head-banner {
-   margin: 0 1rem auto;
+   margin: 0 auto;
    max-width: 1240px;
    position: relative;
    display: flex;
    justify-content: space-between;
    white-space: nowrap;
    overflow: hidden;
-   padding-top: 1rem;
+   padding: 1rem 1rem 0 1rem;
  }
 
  body {
