--- a/style.css
+++ b/style.css
@@ -989,6 +989,7 @@ input[type="submit"],
   font-size: 1.1rem;
 	border-radius: 4px;
 	background: var(--accent);
+  border: 3px solid var(--accent);
 	color: var(--bg);
 	padding: 0.75rem 1rem;
   text-decoration: none;
@@ -1003,7 +1004,7 @@ input[type="submit"]:hover,
 .wp-block-button__link:active,
 .wp-block-button__link:focus,
 .wp-block-button__link:hover {
-	background: var(--text);
+	background: var(--none);
   color: var(--bg);
 }
 
