--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  }
 
  .site-main {
-   max-width: 65ch;
+   max-width: 45rem;
  	 padding: 0 .5rem;
    margin: 0 auto;
  }
