--- a/style.css
+++ b/style.css
@@ -1904,6 +1904,15 @@ i.gb-moderator {
   display: none;
 }
 
+/* Remove iOS formatting on inputs */
+textarea,
+select,
+input {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
 label,
 input,
 textarea {
