--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ img {
 }
 
 .wp-block-image figcaption, figcaption {
-	margin-top: 0;
+	margin-top: -1rem;
 	color: var(--meta);
 	font-size: 0.9rem;
 	text-align: center;
