--- a/style.css
+++ b/style.css
@@ -1101,6 +1101,14 @@ nav a:hover,
   border-bottom: 3px solid var(--text);
 }
 
+.post-nav-links {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 1rem;
+  margin: 0 auto;
+  padding: 0 .5rem;
+}
+
 .page-numbers.current {
   color: var(--meta);
   text-decoration: underline;
