--- a/style.css
+++ b/style.css
@@ -1108,6 +1108,7 @@ nav a:hover,
   padding: 2rem .5rem;
   border-top: 3px solid var(--text);
   border-bottom: 3px solid var(--text);
+  margin: 2rem 0;
 }
 
 .post-nav-links-next {
