--- a/style.css
+++ b/style.css
@@ -1115,6 +1115,7 @@ nav a:hover,
   color: var(--text);
   font-weight: bold;
   text-decoration: none;
+  padding: .5rem 0;
 }
 
 #post-nav-links a:hover {
