--- a/style.css
+++ b/style.css
@@ -1105,6 +1105,8 @@ nav a:hover,
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: .5rem;
+  margin: 0 auto;
+  max-width: 1240px;
   padding: 3rem 0;
   border-top: 3px solid var(--text);
   border-bottom: 3px solid var(--text);
