--- a/style.css
+++ b/style.css
@@ -1105,7 +1105,7 @@ nav a:hover,
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: .5rem;
-  margin: 0 auto;
+  justify-content: center;
   max-width: 1240px;
   padding: 3rem 0;
   border-top: 3px solid var(--text);
