--- a/style.css
+++ b/style.css
@@ -1106,6 +1106,7 @@ nav a:hover,
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: .5rem;
   justify-content: center;
+  margin: 0 auto;
   max-width: 1240px;
   padding: 3rem 0;
   border-top: 3px solid var(--text);
