--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ p {
 }
 
 .has-medium-font-size {
-  font-size: 1.8rem;
+  font-size: 1.8rem !important;
   line-height: 1.3;
   font-weight: lighter;
 }
