--- a/style.css
+++ b/style.css
@@ -522,6 +522,11 @@ input {
   margin: 0;
 }
 
+.subscribe-form a[href*="//"]::after {
+    content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
+    margin-left: 4px;
+}
+
 /* Format the blogroll banners */
 .blogroll-banner {
   background: var(--accent-bg);
