--- a/style.css
+++ b/style.css
@@ -1673,18 +1673,18 @@ p.has-background {
 }
 
 .kb-club a:hover {
-  background: #FFE082;
+  background: #FFB74D;
 	color: #212121;
 }
 
 .kb-club-no-bg {
-	border: 2px solid #FFE082;
+	border: 2px solid #FFB74D;
 	padding: .5rem 1rem;
 }
 
 .kb-club-bg {
-	background: #FFE082;
-	border: 2px solid #FFE082;
+	background: #FFB74D;
+	border: 2px solid #FFB74D;
 	color: #212121;
 	padding: .5rem 1rem;
 }
