--- a/style.css
+++ b/style.css
@@ -1502,7 +1502,7 @@ footer .search-submit:hover {
 
 .footer-base {
   margin-top: 5rem;
-  border-top: 2px solid #666;
+  border-top: 2px solid #FAFAFA;
 }
 
 .widget-area .search-field {
