--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     --pre-bg: #1A1A1A;
     --input-bg: white;
     --wysiwyg: #eaeeff;
-    --admin-reply: #eaeeff;
+    --admin-reply: rgba(0, 0, 0, .1);
     --header: #212121;
     --header-text: #fafafa;
 
@@ -1935,7 +1935,7 @@ i.gb-moderator {
 }
 
 .gwolle-gb .gb-entry-admin_reply, .gwolle-gb .gb-entry-admin-reply {
-	border-left: .35rem solid var(--accent) !important;
+	border-left: .35rem solid var(--text) !important;
 	background: var(--admin-reply) !important;
 	margin-right: .5rem !important;
 }
