--- a/style.css
+++ b/style.css
@@ -696,6 +696,7 @@ h1.entry-title {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
+  font-weight: normal;
 }
 
 h1 {
@@ -738,7 +739,6 @@ p {
 .has-medium-font-size {
   font-size: 1.5rem;
   line-height: 1.3;
-  font-weight: lighter;
 }
 
 .small {
