--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Global colour variables */
  :root {
-     --sans-font: "komika", -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
+     --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
      --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     --accent: #0D47A1;
     --bg: #FAFAFA;
@@ -697,6 +697,7 @@ h1.entry-title {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
   font-weight: normal;
+  font-family: "londrina", var(--sans-font);
 }
 
 h1 {
