--- a/fonts/londrina/londrina.css
+++ b/fonts/londrina/londrina.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
     font-family: 'londrina';
     src: url('bold.woff') format('woff');
@@ -12,19 +13,19 @@
     font-style: italic;
     font-display: swap;
 }
-/*
+*/
 @font-face {
-    font-family: 'cartoonist';
+    font-family: 'londrina';
     src: url('regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
-    font-family: 'cartoonist';
+    font-family: 'londrina';
     src: url('italic.woff') format('woff');
     font-weight: 400;
     font-style: italic;
     font-display: swap;
 }
-*/
+
