--- a/style.css
+++ b/style.css
@@ -1236,6 +1236,7 @@ nav.navigation.posts-navigation a:hover {
 /****** Header elements ******/
 h1.site-logo {
   font-size: 2rem;
+  text-transform: uppercase;
   text-align: center;
   margin: 0;
 }
