--- a/style.css
+++ b/style.css
@@ -687,7 +687,7 @@ h2.entry-title {
 
 h2.entry-title a {
   font-size: 1.8rem;
-  padding: .5rem 1rem;
+  padding: 1rem;
   background: var(--header);
   color: var(--header-text);
   text-decoration: none;
