--- a/style.css
+++ b/style.css
@@ -694,6 +694,10 @@ h2.entry-title a {
   display: inline-block;
 }
 
+h2.entry-title a:hover {
+  background: var(--accent);
+}
+
 h1.entry-title {
   line-height: 1.2;
 }
