--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
    color: var(--header-text);
  }
 
- .drip {
+ .drips {
    margin-top: -6rem;
  }
 
