--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  .site-main {
    max-width: 40rem;
- 	 padding: 0 .5rem;
+ 	 padding: 2.5rem .5rem 0 .5rem;
    margin: 0 auto;
  }
 
@@ -1222,7 +1222,11 @@ nav a:hover,
 
   #site-navigation input:checked ~ #navitems a {
     padding: .25rem .5rem;
-}
+  }
+
+  .site-main {
+    padding-top: 0;
+  }
 }
 
 nav.navigation.posts-navigation {
