--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
    max-width: 40rem;
  	 padding: 0 .5rem;
    margin: 0 auto;
+   position: relative;
  }
 
  /* Define colours for auto dark mode */
