--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  .site-main {
    max-width: 40rem;
- 	 padding: 0 .5rem;
+ 	 padding: 2rem .5rem 0 .5rem;
    margin: 0 auto;
    position: relative;
  }
