--- a/style.css
+++ b/style.css
@@ -1449,7 +1449,7 @@ h1.site-logo a:hover {
 .site-footer {
     background: var(--header);
     color: var(--header-text);
-    padding: 0;
+    padding: 0 0 1rem 0;
     text-align: center;
     margin-top: 3rem;
     font-size: 1rem;
