--- a/style.css
+++ b/style.css
@@ -1539,6 +1539,10 @@ footer h2 {
   margin-bottom: .5rem;
 }
 
+.footer-drips {
+  margin-top: -.5rem;
+}
+
 /*--------------------------------------------------------------
 # Utilities
 --------------------------------------------------------------*/
