--- a/style.css
+++ b/style.css
@@ -1540,7 +1540,8 @@ footer h2 {
 }
 
 .footer-drips {
-  margin-top: -.5rem;
+  margin: -.5rem -.5rem 0 -.5rem;
+  overflow: hidden;
 }
 
 /*--------------------------------------------------------------
