--- a/style.css
+++ b/style.css
@@ -1706,18 +1706,18 @@ p.has-background {
 }
 
 .kb-club a:hover {
-  background: #FBC02D;
+  background: #64B5F6;
 	color: #212121;
 }
 
 .kb-club-no-bg {
-	border: 3px solid #FBC02D;
+	border: 3px solid #64B5F6;
 	padding: .5rem 1rem;
 }
 
 .kb-club-bg {
-	background: #FBC02D;
-	border: 3px solid #FBC02D;
+	background: #64B5F6;
+	border: 3px solid #64B5F6;
 	color: #212121;
 	padding: .5rem 1rem;
 }
