--- a/style.css
+++ b/style.css
@@ -747,12 +747,7 @@ p {
 	margin-bottom: 1.5em;
 }
 
-.medium {
-  font-weight: bold;
-  font-size: 1.5rem;
-  line-height: 1.3;
-}
-
+.medium,
 .has-medium-font-size {
   font-size: 1.5rem;
   line-height: 1.3;
